Trying to fix height issue on mobile

--- a/_sass/arduboy_games.scss
+++ b/_sass/arduboy_games.scss
@@ -23,5 +23,6 @@
 }
 
 div {
+  height: auto;
   background-color: #ECECEC;
 }
